# autonomouscabs

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  RESPONSIBILITIES.txt
backend/: application.cpp  application.hpp  cab.cpp  cab.hpp  cab_manager.cpp  cab_manager.hpp  cab_provision.cpp  cab_provision.hpp  cab_server.cpp  cab_server.hpp  cab_session.cpp  cab_session.hpp  id_type.hpp  main.cpp  node_type.cpp  node_type.hpp  request.cpp  request.hpp  road_network.cpp  road_network.hpp  session.hpp  tcp_server.cpp  tcp_server.hpp  tcp_server.inl  tcp_session.cpp  tcp_session.hpp  tcp_session.inl  web_session.cpp  web_session.hpp
shared/: buffer.cpp  buffer.hpp  buffer_reader.cpp  buffer_reader.hpp  buffer_reader.inl  buffer_writer.cpp  buffer_writer.hpp  buffer_writer.inl  message.cpp  message.hpp  message.inl  protocol.hpp  robot.hpp
test/: main.cpp
test/ada/: Makefile  ada.gpr  empty-loc.xml  gnatinspect.db
test/ada/src/: composite_suite.adb  test_main.adb
test/ada/src/buffer_suite/: buffer_tests.adb  buffer_tests.ads
test/ada/src/graph_suite/: graph_suite.adb  graph_suite.ads  graph_tests.adb  graph_tests.ads
test/ada/src/mailbox_suite/: mailbox_suite.adb  mailbox_suite.ads  mailbox_tests.adb  mailbox_tests.ads
test/ada/src/pathfollowing_suite/: pathfollowing_suite.adb  pathfollowing_suite.ads  pathfollowing_tests.adb  pathfollowing_tests.ads
test/ada/src/tcp_suite/: tcp_suite.adb  tcp_tests.adb  tcp_tests.ads
test/ada/src/types_suite/: types_tests.ads
test/cpp/: main.cpp
test/harness/: Makefile  harness.gpr
test/harness/src/mailbox_suite/: mailbox_tests.adb  mailbox_tests.ads
webots/: .cabservice.wbproj  cabservice.wbt
webots/controllers/controller/: Makefile  controller  controller.cpp  robot_container.cpp  robot_container.hpp
webots/controllers/webots_controller/: webots_controller.c
webots/controllers/webots_controller2/: webots_controller2.cpp
webots/worlds/: .cabservice.wbproj  cabservice.wbt
website/: output.html  statemachine.drawio  website.md  work_distribution.txt
